[package]
name = "blobstream"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tendermint = { version = "0.40" }
tendermint-rpc = { version = "0.40", features = ["http-client", "tracing", "secp256k1"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sp1-verifier = "5.2.2"
revm = "30"
