[package]
name = "openvm-blobstream"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { version = "1.4", default-features = false }
alloy-sol-types = { version = "1.4", default-features = false, features = ["json"] }
alloy-contract = { version = "1.0", optional = true }
alloy-provider = { version = "1.0", optional = true }
tendermint = { version = "0.40", optional = true }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
sp1-verifier = "5.2.2"
revm = { version = "29", default-features = false }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
host = ["dep:alloy-contract", "dep:alloy-provider", "dep:reqwest", "dep:tendermint"]
