[package]
edition = "2024"
name = "openvm-blobstream"
version = "0.1.0"

[dependencies]
alloy-primitives = { version = "1.4", default-features = false }
alloy-sol-types = { version = "1.4", default-features = false, features = ["json"] }
eyre = "0.6"
revm = { version = "29", default-features = false }
serde = { version = "1.0", features = ["derive"] }

# host
alloy-contract = { version = "1.0", optional = true }
alloy-provider = { version = "1.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tendermint = { version = "0.40", optional = true }

# openvm
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", optional = true }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", optional = true }

[features]
host = ["dep:alloy-contract", "dep:alloy-provider", "dep:reqwest", "dep:tendermint"]
openvm = ["dep:openvm-ecc-guest", "dep:openvm-pairing", "openvm-pairing/bn254", "alloy-primitives/native-keccak"]
