[workspace]
members = [
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
bitcode = "0.6"
toml = "*"
tracing = "*"
serde_json = "*"

openvm-blobstream = { path = ".." }

openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
