[package]
edition = "2021"
name = "blobstream-program"
version = "0.1.0"

[dependencies]
openvm = { workspace = true, features = ["std"] }
openvm-algebra-guest.workspace = true
openvm-blobstream = { workspace = true, features = ["openvm"] }
openvm-ecc-guest.workspace = true
openvm-keccak256-guest = { workspace = true }
