[package]
edition = "2021"
name = "blobstream-script"
version = "0.1.0"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
eyre = "0.6"
bitcode.workspace = true
clap.workspace = true
openvm-benchmarks-prove.workspace = true
openvm-circuit.workspace = true
openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
toml.workspace = true
tracing.workspace = true
openvm-blobstream = { workspace = true, features = ["host"] }
tendermint-rpc = { version = "0.40", features = ["http-client", "tracing", "secp256k1"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
