[package]
edition = "2021"
name = "blobstream-script"
version = "0.1.0"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
bitcode.workspace = true
clap.workspace = true
eyre = "0.6"
openvm-benchmarks-prove.workspace = true
openvm-blobstream = { workspace = true, features = ["host"] }
openvm-circuit.workspace = true
openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
tendermint-rpc = { version = "0.40", features = ["http-client", "tracing", "secp256k1"] }
tokio = { version = "1", features = ["full"] }
toml.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
